[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Win.gd" type="Script" id=1]
[ext_resource path="res://assets/main_menu/Buttons - scale 0,3/Normal/Buttons-Normal---Restart.png" type="Texture" id=2]
[ext_resource path="res://assets/main_menu/Buttons - scale 0,3/Press/Buttons-Press---Restart.png" type="Texture" id=3]
[ext_resource path="res://assets/main_menu/Buttons - scale 0,3/Hover/Buttons-Hover---Restart.png" type="Texture" id=4]
[ext_resource path="res://assets/main_menu/Buttons - scale 0,3/Normal/Buttons-Normal---Main-Menu.png" type="Texture" id=5]
[ext_resource path="res://assets/main_menu/Buttons - scale 0,3/Press/Buttons-Press---Main-Menu.png" type="Texture" id=6]
[ext_resource path="res://assets/main_menu/Buttons - scale 0,3/Hover/Buttons-Hover---Main-Menu.png" type="Texture" id=7]
[ext_resource path="res://assets/Sprites/Images/You Won!.png" type="Texture" id=8]

[node name="Win" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.196078 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 810.0
margin_top = 450.0
margin_right = 1110.0
margin_bottom = 630.0
size_flags_horizontal = 5
custom_constants/separation = 30

[node name="Restart" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 75.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Main_menu" type="TextureButton" parent="CenterContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 300.0
margin_bottom = 180.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="You Won!" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 8 )
[connection signal="pressed" from="CenterContainer/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Main_menu" to="." method="_on_Main_menu_pressed"]
